--- a/02.start.md
+++ b/02.start.md
@@ -59,8 +59,8 @@ npm install
       rollupOptions: {
         input: {
           index: resolve(__dirname, 'index.html'), // 기본 index.html
-          login: resolve(__dirname, 'src/pages/auth/login.html'), // 추가 HTML 파일
-          list: resolve(__dirname, 'src/pages/board/list.html'), // 추가 HTML 파일
+          // login: resolve(__dirname, 'src/pages/auth/login.html'), // 추가 HTML 파일
+          // list: resolve(__dirname, 'src/pages/board/list.html'), // 추가 HTML 파일
           // 필요한 다른 HTML 파일을 여기에 추가
         },
       },
@@ -114,7 +114,7 @@ git commit -m "프로젝트 기본 환경설정"
 git push origin main
 ```
 
-### 배포
+### 서비스 배포
 #### Netlify
 * <https://netlify.com>
 
