--- a/04.start-team.md
+++ b/04.start-team.md
@@ -22,7 +22,7 @@ git clone https://github.com/FRONTENDBOOTCAMP-11th/febc11-vanilla-팀명.git
 ```
 
 ### 개발환경 구축
-* [프로젝트 시작 - 개발 환경 구축](./02.start.md#개발-환경-구축) 참고
+* [프로젝트 생성에서 배포까지 - 개발 환경 구축](./02.start.md#개발-환경-구축) 참고
 
 ## 프로젝트 배포
-* [프로젝트 시작 - 프로젝트 배포](./02.start.md#프로젝트-배포) 참고
+* [프로젝트 생성에서 배포까지 - 프로젝트 배포](./02.start.md#프로젝트-배포) 참고
