--- a/05.issue.md
+++ b/05.issue.md
@@ -78,18 +78,17 @@ feat: 카카오 연동 완료
 #123 
 ```
 
-* 커밋 메세지 입력 시 이슈 번호와 다음 키워드 같이 사용히면 이슈를 종료 시킬 수 있음
-```
-close
-closes
-closed
-fix
-fixes
-fixed
-resolve
-resolves
-resolved
-```
+* 커밋 메세지 입력 시 이슈 번호와 다음 키워드를 같이 사용하면 이슈를 종료 시킬 수 있음
+```close```
+```closes```
+```closed```
+```fix```
+```fixes```
+```fixed```
+```resolve```
+```resolves```
+```resolved```
+
 ```
 feat: 카카오 연동 오류 수정
 
