--- a/03.feature.md
+++ b/03.feature.md
@@ -8,7 +8,7 @@
 * 요일별 연재(삭제, 구현하려면 시안에는 없는 작가의 글쓰는 기능 필요)
 * **요즘 뜨는 브런치(필수)**
 * 오늘의 작가(선택)
-* **구독자 급등 작가(필수)**
+* **구독자 급등 작가(필수, TOP 구독 작가로 수정)**
 
 ### **발견(필수)**
 * **글 검색(필수)**
