--- a/07.wiki.md
+++ b/07.wiki.md
@@ -1,18 +1,17 @@
-# 위키 및 README.md
+# 문서화
 
 ## 위키(Wiki)
 * GitHub Wiki는 GitHub 저장소의 일부로, 프로젝트 팀원들이 프로젝트와 관련된 정보를 쉽게 공유하고 문서화할 수 있는 플랫폼을 말하며 Wiki 문서는 마크다운으로 쉽게 작성이 가능
 
-* Wiki를 통한 문서화는 프로젝트의 지식을 쉽게 공유하고 기록할 수 있도록 도움
-
-([Wiki 사례](https://github.com/Devfolio-team/Devfolio-Client/wiki))
+* Wiki를 통한 문서화는 프로젝트의 지식을 쉽게 공유하고 기록할 수 있도록 도움([Wiki 사례](https://github.com/Devfolio-team/Devfolio-Client/wiki))
 ![Wiki 사례](https://raw.githubusercontent.com/uzoolove/fes11-project-vanilla-ins/main/assets/images/wiki-sample.webp)
+
 ### 위키 생성 및 편집
 * 깃허브 저장소 > Wiki > Create the first page
-  - 제목: 브랜치 스토리
+  - 제목: 바닐라 프로젝트 8조 위키
   - 내용
   ```
-  Front-End BootCamp 11기 바닐라 프로젝트 1조의 Wiki에 오신걸 환영합니다.
+  Front-End BootCamp 11기 바닐라 프로젝트 8조의 Wiki에 오신걸 환영합니다.
   ## 프로젝트 구성원
   ### 무지
   ![무지](https://i.namu.wiki/i/pdMrui2AsyKHVwxjn6u7Rp-BVAQd7oljaobvnnV_AAIxt-2laCBx6WWfpCx72CJ5MU6XJgw7dWgNgnVFibAi7GD5-CymiITFOuV2mRvP3ld9pINxtNoUQGG9T-YQEZfFbR2XmgUodrrVsQ-a1UHV1A.webp)
@@ -28,4 +27,7 @@
 
 * Add a custom sidebar
   - 사이드바 추가
+
+### 로컬에서 편집
+* Clone this wiki locally 항목의 git 주소를 clone 하면 로컬에서 Wiki 작성 가능
 
