--- a/08.convention.md
+++ b/08.convention.md
@@ -1,4 +1,4 @@
-## 코드 컨벤션
+# 코드 컨벤션
 * 가독성이 좋고 유지보수가 쉬운 코드를 작성하기 위한 코딩 스타일 규약
 * 개발자간 서로 다른 코딩 스타일 예시
 
@@ -18,16 +18,16 @@ const App = function(){
 const App = () => <h1>Hello</h1>;
 ```
 
-### 다양한 코드 컨벤션 가이드
+## 다양한 코드 컨벤션 가이드
 * [Airbnb JavsScript Style Guide](https://github.com/airbnb/javascript)
 * [Airbnb React/JSX Style Guide](https://github.com/airbnb/javascript/tree/master/react)
 * [JavaScript Standard Style](https://standardjs.com/readme-kokr.html)
 * [Idiomatic JavaScript Style Guide](https://github.com/rwaldron/idiomatic.js/tree/master/translations/ko_KR)
 * [Google Style Guide](https://google.github.io/styleguide/jsguide.html)
 
-### ESLint 컨벤션
+## ESLint 컨벤션
 
-#### ESLint
+### ESLint
 * 정적 문법 검사 및 코딩 스타일 등을 점검해서 런타임 오류나 코드의 가독성을 높이기 위해 사용하는 도구
 * 규칙 예시
   - const로 선언한 변수에 값을 재할당하면 경고
@@ -38,7 +38,7 @@ const App = () => <h1>Hello</h1>;
 * CRA나 Vite로 생성한 프로젝트에는 기본으로 내장되어 있고 npm start나 npm run dev로 서버 구동시 동작
   - 터미널에서 ESLint 경고/에러 확인 가능
 
-#### React 프로젝트의 ESLint 설정
+### 프로젝트의 ESLint 설정
 * 설정 파일 작성 방법: <https://eslint.org/docs/latest/use/configure/configuration-files>
 * 프로젝트 루트에서 다음 명령 실행후 프로젝트 환경 질문에 답변하면 .eslintrc.js 파일 생성됨
   ```shell
@@ -51,52 +51,42 @@ const App = () => <h1>Hello</h1>;
   * What type of modules does your project use?
     - JavaScript modules (import/export)
   * Which framework does your project use?
-    - React
+    - None of these
   * Does your project use TypeScript?
     - No
   * Where does your code run?
-    - browser
+    - Browser
   * What format do you want your config file to be in?
     - JavaScript
-  * eslint-plugin-react@latest eslint@latest. Would you like to install them now?
-    - Yes
-  * Which package manager do you want to use?
-    - npm
   ```
 
 * .eslintrc.js
   ```js
   module.exports = {
-    "env": {
-      "browser": true,
-      "es2021": true
-    },
-    "extends": [
-      "eslint:recommended", // eslint
-      "plugin:react/recommended"  // eslint-plugin-react
-    ],
-    "overrides": [
-      {
-        "env": {
-          "node": true
-        },
-        "files": [
-          ".eslintrc.{js,cjs}"
-        ],
-        "parserOptions": {
-          "sourceType": "script"
-        }
+      "env": {
+          "browser": true,
+          "es2021": true
+      },
+      "extends": "eslint:recommended",
+      "overrides": [
+          {
+              "env": {
+                  "node": true
+              },
+              "files": [
+                  ".eslintrc.{js,cjs}"
+              ],
+              "parserOptions": {
+                  "sourceType": "script"
+              }
+          }
+      ],
+      "parserOptions": {
+          "ecmaVersion": "latest",
+          "sourceType": "module"
+      },
+      "rules": {
       }
-    ],
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "plugins": [
-      "react" // eslint-plugin-react
-    ],
-    "rules": {
-    }
   }
   ```
 
@@ -124,13 +114,12 @@ const App = () => <h1>Hello</h1>;
   module.exports = {
     ......
     "rules": {
-      "react/react-in-jsx-scope": "off",
-      "react/prop-types": 0
+      "no-unused-vars": "warn"
     }
   }
   ```
 
-#### ESLint 실행
+### ESLint 실행
 * 현재 폴더내의 모든 파일 검사
   ```shell
   npx eslint .
@@ -146,21 +135,21 @@ const App = () => <h1>Hello</h1>;
   npx eslint ./src/App.js
   ```
 
-#### VSCode ESLint 플러그인 설치
+### VSCode ESLint 플러그인 설치
 * VSCode 편집창에서 바로 ESLint 경고/에러 확인 가능
 * VSCode > Extensions > ESLint 검색, 설치
-  - VSCode에서 오픈한 작업폴더에 설치된 eslint 모듈이나 글로벌로 설치된 eslint 모듈을 사용하므로 eslint 모듈이 설치되어 있어야 함(CRA나 Vite로 프로젝트 생성시 기본으로 설치됨)
+  - VSCode에서 오픈한 작업폴더에 설치된 eslint 모듈이나 글로벌로 설치된 eslint 모듈을 사용하므로 eslint 모듈이 설치되어 있어야 함
     ```shell
     npm i eslint
     npm i -g eslint
     ```
 
-### Prettier 컨벤션
+## Prettier 컨벤션
 
-#### Prettier
+### Prettier
 * 자바스크립트 Code Formatting 도구(코드 정렬, 정리 등 코드 스타일 통일에 사용)
 
-#### 프로젝트에 Prettier 설정
+### 프로젝트에 Prettier 설정
 * Prettier 설치
   ```shell
   npm i prettier
@@ -190,7 +179,7 @@ const App = () => <h1>Hello</h1>;
   };
   ```
 
-#### Prettier 실행
+### Prettier 실행
 * 현재 폴더내의 모든 파일을 포맷에 맞춰서 변환
   ```shell
   npx prettier --write .
@@ -206,8 +195,8 @@ const App = () => <h1>Hello</h1>;
   npx prettier --write ./src/App.js
   ```
 
-#### ESLint와 충돌
-* ESLint는 코드 품질 규칙뿐만 아니라 스타일 규칙도 포함됨
+### ESLint와 충돌
+* ESLint에는는 코드 품질 규칙뿐만 아니라 스타일 규칙도 포함됨
 * 일반적으로 코드 품질 문제는 ESLint를 사용하고 스타일 규칙은 Prettier를 사용
 * eslint-config-prettier: 불필요하거나 Prettier와 충돌할 수 있는 모든 규칙을 비활성화시키는 Shareable Config 모듈
 * eslint-config-prettier 설치
@@ -225,16 +214,16 @@ const App = () => <h1>Hello</h1>;
   }
   ```
 
-#### VSCode에 Prettier Extention 추가
+### VSCode에 Prettier Extention 추가
 * Extentions > Prettier - Code formatter 설치
 * File > Preferences > Settings > Workspace
   - "Editor: Format On Save" 체크 (파일 저장시 자동으로 포맷팅)
   - "Editor: Default Formatter"에 "Prettier - Code formatter" 선택 (기본 JavaScript formatter 대신 Prettier를 formatter로 지정)
 
-## Git 커밋 메세지 컨벤션
+# Git 커밋 메세지 컨벤션
 * 커밋 메세지의 일관성을 위해 작성
 
-### Udacity Git Commit Message Style Guide
+## Udacity Git Commit Message Style Guide
 * 메세지 구조
   ```
   type: Subject
@@ -271,14 +260,14 @@ const App = () => <h1>Hello</h1>;
   See also: #456, #789
   ```
 
-### Gitmoji
+## Gitmoji
 * Git + Emoji
 * Git 커밋 메세지의 type을 텍스트 대신 Emoji로 지정해서 한눈에 어떤 작업을 했는지 식별
 
-#### Gitmoji 설치
+### Gitmoji 설치
 * Extentions > Gitmoji 설치
 
-#### Gitmoji 설정
+### Gitmoji 설정
 * File > Preferences > Settings > Workspace
   - "Gitmoji: Add Custom Emoji" > Edit in settings.json 클릭 후 Git 커밋 메세지 컨벤션에 맞춰서 커스텀 이모지 추가
   - 예시
@@ -355,5 +344,5 @@ const App = () => <h1>Hello</h1>;
     }
     ```
 
-#### Gitmoji 사용
+### Gitmoji 사용
 * VSCode > Source Control 커밋 메세지 입력시 Choose Gitmoji 아이콘 선택해서 사용
