--- a/docs/03.feature.md
+++ b/docs/03.feature.md
@@ -1,82 +1,97 @@
 # 구현 기능 범위
 
 ## 브런치 스토리
-* 원래의 브런치 스토리는 일반 회원과 작가로 나뉘지만 시안에서는 따로 나누지 않음
+
+- 원래의 브런치 스토리는 일반 회원과 작가로 나뉘지만 시안에서는 따로 나누지 않음
 
 ### **메인 페이지(필수)**
-* 스와이퍼(선택)
-* 요일별 연재(삭제, 구현하려면 시안에는 없는 작가의 글쓰는 기능 필요)
-* **요즘 뜨는 브런치(필수)**
-* 오늘의 작가(선택)
-* **구독자 급등 작가(필수, TOP 구독 작가로 수정)**
+
+- 스와이퍼(선택)
+- 요일별 연재(삭제, 구현하려면 시안에는 없는 작가의 글쓰는 기능 필요)
+- **요즘 뜨는 브런치(필수)**
+- 오늘의 작가(선택)
+- **구독자 급등 작가(필수, TOP 구독 작가로 수정)**
 
 ### **발견(필수)**
-* **글 검색(필수)**
-* **작가 검색(필수)**
-* 정확도/최신 순 정렬(선택)
+
+- **글 검색(필수)**
+- **작가 검색(필수)**
+- 정확도/최신 순 정렬(선택)
 
 ### **상세페이지(필수)**
-* 댓글 목록 조회(선택)
-* 댓글 등록(선택)
-* 댓글 페이지네이션 또는 무한 스크롤(선택)
-* **좋아요 등록/취소(필수)**
-* **구독 등록/취소(필수)**
-* SNS 공유(선택)
+
+- 댓글 목록 조회(선택)
+- 댓글 등록(선택)
+- 댓글 페이지네이션 또는 무한 스크롤(선택)
+- **좋아요 등록/취소(필수)**
+- **구독 등록/취소(필수)**
+- SNS 공유(선택)
 
 ### **내서랍(필수)**
-* **관심 작가(필수)**
-* **최근 본 글(필수)**
-* **관심 글(필수)**
+
+- **관심 작가(필수)**
+- **최근 본 글(필수)**
+- **관심 글(필수)**
 
 ### **글쓰기(필수)**
-* **파일 첨부(필수)**
-* 텍스트 정렬(선택)
+
+- **파일 첨부(필수)**
+- 텍스트 정렬(선택)
 
 ### **작가 홈(필수)**
-* **작가 정보(필수)**
-* **구독/구독 취소(필수)**
-* **작가의 글 목록(필수)**
+
+- **작가 정보(필수)**
+- **구독/구독 취소(필수)**
+- **작가의 글 목록(필수)**
 
 ### **시작하기(필수)**
-* **이메일 회원 가입(로그인)(필수)**
-* 카카오 회원 가입(로그인)(선택)
+
+- **이메일 회원 가입(로그인)(필수)**
+- 카카오 회원 가입(로그인)(선택)
 
 ## 나이키
+
 ### **메인 홈(필수)**
-* 여러 항목중 **2~3개 항목**만 필수
+
+- 여러 항목중 **2~3개 항목**만 필수
 
 ### **상품 리스트(필수)**
-* **메인/서브 카테고리별 상품 목록 조회(필수)**
-* 성별, 가격대 필터링(선택)
-* 정렬(선택)
-* 페이지네이션 또는 인피니트 스크롤(선택)
+
+- **메인/서브 카테고리별 상품 목록 조회(필수)**
+- 성별, 가격대 필터링(선택)
+- 정렬(선택)
+- 페이지네이션 또는 인피니트 스크롤(선택)
 
 ### **제품 상세(필수)**
-* **색상 선택(필수)**
+
+- **색상 선택(필수)**
   - 재고 여부 확인(선택)
-* **사이즈 선택(필수)**
+- **사이즈 선택(필수)**
   - 재고 여부 확인(선택)
-* **장바구니에 담기(필수)**
-* 위시리스트에 추가(선택)
-* 리뷰(선택)
+- **장바구니에 담기(필수)**
+- 위시리스트에 추가(선택)
+- 리뷰(선택)
   - 목록 조회
   - 작성
-* 추천 제품 목록(선택)
+- 추천 제품 목록(선택)
 
 ### 매장 찾기(선택)
-* 지도형
-* 목록형
+
+- 지도형
+- 목록형
 
 ### 위시 리스트(선택)
-* 위시 리스트 목록 조회
-* 수정
+
+- 위시 리스트 목록 조회
+- 수정
 
 ### **장바구니(필수)**
-* **장바구니 상품 목록 조회(필수)**
-* 위시리스트 상품 목록 조회(선택)
-* **수량 수정(필수)**
-* 위시리스트로 이동(선택)
-* **삭제(필수)**
-* 추천 제품 목록(선택)
+
+- **장바구니 상품 목록 조회(필수)**
+- 위시리스트 상품 목록 조회(선택)
+- **수량 수정(필수)**
+- 위시리스트로 이동(선택)
+- **삭제(필수)**
+- 추천 제품 목록(선택)
 
 ### **로그인 & 회원가입(필수)**
