--- a/docs/09.tailwind.md
+++ b/docs/09.tailwind.md
@@ -1,41 +1,49 @@
 # Tailwind CSS
 
 ## Tailwind CSS란?
-* utility-first CSS framework
-* 미리 정의된 CSS 클래스를 이용해서 스타일링을 할 수 있는 프레임워크
-* CSS 파일을 따로 만들 필요 없이 제공되는 클래스를 HTML 태그에 직접 지정
+
+- utility-first CSS framework
+- 미리 정의된 CSS 클래스를 이용해서 스타일링을 할 수 있는 프레임워크
+- CSS 파일을 따로 만들 필요 없이 제공되는 클래스를 HTML 태그에 직접 지정
 
 ## 장점
-* 개발 생산성: 개발자가 CSS 클래스를 정의할 필요 없이 미리 정의된 클래스를 사용하기 때문에 개발 속도와 생산성을 높일 수 있음
-* 재사용성: 재사용 가능한 클래스가 제공되므로 동일한 클래스를 여러 엘리먼트에 사용해서 일관된 디자인 구축
-* 유연성: 많은 유틸리티 클래스를 제공하고 커스터마이징이 가능
-* 가독성: 클래스 이름이 직관적이라서 가독성이 높음
-* 파일 크기: 사용하는 클래스만 포함하여 최적화된 CSS 생성
+
+- 개발 생산성: 개발자가 CSS 클래스를 정의할 필요 없이 미리 정의된 클래스를 사용하기 때문에 개발 속도와 생산성을 높일 수 있음
+- 재사용성: 재사용 가능한 클래스가 제공되므로 동일한 클래스를 여러 엘리먼트에 사용해서 일관된 디자인 구축
+- 유연성: 많은 유틸리티 클래스를 제공하고 커스터마이징이 가능
+- 가독성: 클래스 이름이 직관적이라서 가독성이 높음
+- 파일 크기: 사용하는 클래스만 포함하여 최적화된 CSS 생성
 
 ## 사용 방법
+
 ### 설치
+
 ```sh
 npm install -D tailwindcss postcss autoprefixer
 ```
+
 #### PostCSS
-* CSS를 변환하는 도구로, 다양한 CSS 전처리기, 후처리기 및 CSS 확장을 사용할 수 있도록 도와줌
-* PostCSS를 사용하여 CSS를 처리하고 변경할 수 있음
-* 플러그인 생태계: 다양한 플러그인을 사용하여 CSS를 확장하고 향상시킬 수 있음
+
+- CSS를 변환하는 도구로, 다양한 CSS 전처리기, 후처리기 및 CSS 확장을 사용할 수 있도록 도와줌
+- PostCSS를 사용하여 CSS를 처리하고 변경할 수 있음
+- 플러그인 생태계: 다양한 플러그인을 사용하여 CSS를 확장하고 향상시킬 수 있음
   - autoprefixer 플러그인: vender prefix를 자동으로 추가
   - tailwindcss 플러그인: tailwindcss 사용
-* 성능 개선: PostCSS는 CSS를 효율적으로 처리하고 최적화
-* 모던 CSS 사용: PostCSS는 최신 CSS 스펙을 지원하지 않는 브라우저에서도 최신 CSS 사용이 가능하도록 해줌
-* 자동화 도구와 통합하여 CSS 작업을 자동화하고 효율적으로 관리
+- 성능 개선: PostCSS는 CSS를 효율적으로 처리하고 최적화
+- 모던 CSS 사용: PostCSS는 최신 CSS 스펙을 지원하지 않는 브라우저에서도 최신 CSS 사용이 가능하도록 해줌
+- 자동화 도구와 통합하여 CSS 작업을 자동화하고 효율적으로 관리
 
 ### 설정 파일 생성
-* tailwind.config.js
-* postcss.config.js(-p 옵션으로 생성)
+
+- tailwind.config.js
+- postcss.config.js(-p 옵션으로 생성)
   ```sh
   npx tailwindcss init -p
   ```
 
 ### 설정 파일 수정
-* tailwind.config.js
+
+- tailwind.config.js
   - tailwindcss를 적용할 대상 확장자 지정
     ```js
     /** @type {import('tailwindcss').Config} */
@@ -45,9 +53,9 @@ npm install -D tailwindcss postcss autoprefixer
         extend: {},
       },
       plugins: [],
-    }
+    };
     ```
-* postcss.config.js
+- postcss.config.js
   - PostCSS의 플러그인 설정 파일
   - 기본으로 tailwindscss와 autoprefixer 플러그인이 추가되어 있음
     ```
@@ -60,7 +68,9 @@ npm install -D tailwindcss postcss autoprefixer
     ```
 
 ### tailwindcss 지시어 추가
-* index.css
+
+- index.css
+
   ```css
   @tailwind base;
   @tailwind components;
@@ -68,11 +78,11 @@ npm install -D tailwindcss postcss autoprefixer
   ```
 
   - 지시어 경고 수정
-    + VSCode는 @tailwind 키워드를 인식할 수 없어서 경고 발생
-    + VScode 설정에서 unknown at rules 검색 후 CSS > Lint: Unknown At Rules를 Ignore로 변경
-    
+    - VSCode는 @tailwind 키워드를 인식할 수 없어서 경고 발생
+    - VScode 설정에서 unknown at rules 검색 후 CSS > Lint: Unknown At Rules를 Ignore로 변경
+
 ### VSCode 플러그인
-* Tailwind CSS IntelliSense
+
+- Tailwind CSS IntelliSense
   - VSCode에서 tainwindcss 관련 자동 완성, 구문 강조, 린팅 같은 기능 제공
   - 마우스 오버시 실제 적용되는 CSS가 툴팁으로 표시
-
