--- a/docs/12.practice.md
+++ b/docs/12.practice.md
@@ -73,6 +73,14 @@ git push origin develop
 
 ## 저장소 clone(팀원)
 
+```
+git clone https://github.com/FRONTENDBOOTCAMP-11th/febc11-vanilla-팀명.git
+cd febc11-vanilla-팀명
+npm install
+```
+
+## 이슈 생성
+
 ## 이슈 처리를 위한 브랜치 생성
 
 ## 커밋
@@ -88,3 +96,7 @@ git push origin develop
 ## PR 병합
 
 ## 브랜치 삭제
+
+```
+
+```
