⚰️ 초기 버전 작업 완료

--- a/docs/05.issue.md
+++ b/docs/05.issue.md
@@ -19,9 +19,9 @@ mkdir ".github/ISSUE_TEMPLATE"
   ---
   name: 버그 리포트
   about: 버그를 신고하여 문제 해결에 도움을 주세요.
-  title: "[버그] 문제 설명"
+  title: '[버그] 문제 설명'
   labels: bug
-  assignees: ""
+  assignees: ''
   ---
 
   ## 버그 설명
@@ -62,9 +62,9 @@ mkdir ".github/ISSUE_TEMPLATE"
   ---
   name: 기능 요청
   about: 새로운 기능 또는 개선 사항을 제안합니다.
-  title: "[기능 요청] 원하는 기능 설명"
+  title: '[기능 요청] 원하는 기능 설명'
   labels: enhancement
-  assignees: ""
+  assignees: ''
   ---
 
   ## 기능 요청 사항
