--- a/docs/08.convention.md
+++ b/docs/08.convention.md
@@ -42,84 +42,97 @@ const App = () => <h1>Hello</h1>;
 ### 프로젝트의 ESLint 설정
 
 - 설정 파일 작성 방법: <https://eslint.org/docs/latest/use/configure/configuration-files>
-- 프로젝트 루트에서 다음 명령 실행후 프로젝트 환경 질문에 답변하면 .eslintrc.js 파일 생성됨
+- 프로젝트 루트에서 다음 명령 실행후 프로젝트 환경 질문에 답변하면 eslint.config.js 파일 생성됨
 
-  ```shell
-  npm init @eslint/config
-  또는
-  npx eslint --init
+* eslint.config.js 파일 생성
 
-  * How would you like to use ESLint?
-    - To check syntax and find problems
-  * What type of modules does your project use?
-    - JavaScript modules (import/export)
-  * Which framework does your project use?
-    - None of these
-  * Does your project use TypeScript?
-    - No
-  * Where does your code run?
-    - Browser
-  * What format do you want your config file to be in?
-    - JavaScript
-  ```
+```sh
+npx eslint@latest --init
+또는
+npm init @eslint/config@latest
 
-- .eslintrc.js
+Need to install the following packages: @eslint/create-config@1.3.1 Ok to proceed? (y)
+  - y
+? How would you like to use ESLint?
+  - To check syntax and find problems
+? What type of modules does your project use?
+  - JavaScript modules (import/export)
+? Which framework does your project use?
+  - None of these
+? Does your project use TypeScript?
+  - No
+? Where does your code run?
+  - Browser
+The config that you have selected requires the following dependencies:
 
-  ```js
-  module.exports = {
-    env: {
-      browser: true,
-      es2021: true,
-    },
-    extends: "eslint:recommended",
-    overrides: [
-      {
-        env: {
-          node: true,
-        },
-        files: [".eslintrc.{js,cjs}"],
-        parserOptions: {
-          sourceType: "script",
-        },
-      },
-    ],
-    parserOptions: {
-      ecmaVersion: "latest",
-      sourceType: "module",
-    },
-    rules: {},
-  };
-  ```
+eslint, globals, @eslint/js
+? Would you like to install them now?
+  - Yes
+? Which package manager do you want to use?
+  - npm
+```
 
-- env: 자바스크립트가 실행되는 환경 지정
-  - browser를 지정할 경우 document, alert() 등을 window 객체의 속성으로 인식해서 경고/에러 표시하지 않음
-  - commonjs를 지정할 경우 module 등을 nodejs의 모듈 객체로 인식해서 경고/에러 표시하지 않음
-- plugins: 규칙, 환경, 구성 등을 정의한 서드 파티 플러그인 등록
-  - 플러그인에 정의된 rule set을 사용하고 기본은 모든 rule이 off 상태이므로 직접 rule을 정의해야 함
-  - 플러그인이 config file을 제공한다면 extends에 "plugin:" 접두사를 붙여서 추가하고 해당 config가 제공하는 모든 rule이 적용됨
-    - plugins 설정에 해당 플러그인을 지정할 필요 없음
-  - 플러그인 이름의 접두사 "eslint-plugin-" 생략 가능
-- extends: eslint-config-airbnb 같은 Shareable Config 모듈을 지정하면 rules, plugins 등 규칙 세트와 스타일을 상속받을 수 있음
-  - 지정한 모듈이 제공하는 config file을 이용해서 자동으로 rule이 추가됨
-  - Shareable Config 모듈 이름의 접두사 "eslint-config-" 생략 가능
+- eslint.config.js
+
+```js
+import globals from 'globals';
+import pluginJs from '@eslint/js';
+import tseslint from 'typescript-eslint';
+
+export default [
+  { files: ['**/*.{js,mjs,cjs,ts}'] },
+  { languageOptions: { globals: globals.browser } },
+  pluginJs.configs.recommended,
+  ...tseslint.configs.recommended,
+];
+```
+
+### 설정 파일 내용
+
+- files: 확장자가 js, mjs, cjs, ts인 경우에 적용
+- languageOptions.globals: 각 전역 변수를 덮어쓰기 가능한지 여부 지정(true면 덮어쓰기 가능, false면 읽기 전용, 기본은 false)
+  - globals.browser: 브라우저의 전역 변수에 대해서 기본값(false, 읽기 전용) 적용(location, 이벤트 핸들러에 대해서만 true)
+- pluginJs.configs.recommended: ESLint 팀에서 권장하는 규칙 활성화
+  - pluginJs.configs.all: 모든 ESLint 규칙 활성화
 - rules: 사용자 정의 규칙 지정
-  - plugins, extends에서 정의된 규칙보다 우선함
+  - 이전의 모든 규칙 보다 우선함
   - 'off' 또는 0
   - 'warn' 또는 1
   - 'error' 또는 2
 
-#### 커스텀 규칙 설정
+### 커스텀 규칙 설정
 
-- 필요에 따라 .eslintrc.js 파일의 rules에 커스텀 룰 추가
-- 작성 방법: https://eslint.org/docs/latest/rules
-  ```js
-  module.exports = {
-    ......
+- 필요에 따라 eslint.config.js 파일의 rules에 커스텀 룰 추가
+- 작성 방법
+  - Javascript: <https://eslint.org/docs/latest/rules>
+  - Typescript: <https://typescript-eslint.io/rules>
+
+```js
+export default [
+  ......
+  {
     "rules": {
-      "no-unused-vars": "warn"
+      "no-var": "off", // var 키워드 사용 가능
+      "prefer-const": "warn", // 변수가 재할당 되지 않는다면 let 대신 const 사용
+      "no-cond-assign": "warn", // 조건문에서 변수값 할당식 사용
+      "no-redeclare": "warn", // 변수 중복 선언
     }
   }
-  ```
+]
+```
+
+### 규칙 예외 지정
+
+- 필요에 따라 eslint.config.js 파일의 ignores에 예외 지정
+
+```js
+export default [
+  ......
+  {
+    ignores: ['.history', 'dist'],
+  },
+]
+```
 
 ### ESLint 실행
 
@@ -167,7 +180,7 @@ const App = () => <h1>Hello</h1>;
 - 프로젝트 루트에 .prettierrc.js 파일 작성
 - .prettierrc.js 예시
   ```js
-  module.exports = {
+  export default {
     // 문자열에 single quote 사용(기본값 true)
     singleQuote: true,
     // 코드 마지막에 세미콜론 추가(기본값 true)
@@ -177,13 +190,13 @@ const App = () => <h1>Hello</h1>;
     // 들여쓰기 너비 2칸(기본값 2)
     tabWidth: 2,
     // 여러 줄의 쉼표로 구분된 구문 구조에서 후행 쉼표를 추가(none: 설정 안함, es5: 객체,배열에 설정, all(기본값): 함수 정의나 호출 등 가능한 모든 곳에 설정)
-    trailingComma: "all",
+    trailingComma: 'all',
     // 한줄에 80 글자가 넘어가면 줄바꿈(기본값 80)
     printWidth: 80,
     // 화살표 함수의 매개변수가 하나만 지정될 때 괄호 생략(always: 항상 괄호 명시, avoid: 가능하면 생략)
-    arrowParens: "avoid",
+    arrowParens: 'avoid',
     // windows에 뜨는 'Delete cr' 에러 해결
-    endOfLine: "auto",
+    endOfLine: 'auto',
   };
   ```
 
@@ -208,24 +221,23 @@ const App = () => <h1>Hello</h1>;
 
 ### ESLint와 충돌
 
-- ESLint에는는 코드 품질 규칙뿐만 아니라 스타일 규칙도 포함됨
+- ESLint에는 코드 품질 규칙뿐만 아니라 스타일 규칙도 포함됨
 - 일반적으로 코드 품질 문제는 ESLint를 사용하고 스타일 규칙은 Prettier를 사용
 - eslint-config-prettier: 불필요하거나 Prettier와 충돌할 수 있는 모든 규칙을 비활성화시키는 Shareable Config 모듈
 - eslint-config-prettier 설치
-
-  ```shell
-  npm i -D eslint-config-prettier
-  ```
+```sh
+npm i -D eslint-config-prettier
+```
 
 - 다른 구성을 재정의하기 위해 .eslintrc 파일 extends의 마지막에 추가
-  ```json
-  {
-    "extends": [
-      ......
-      "prettier"
-    ]
-  }
-  ```
+```json
+{
+  "extends": [
+    ......
+    "prettier"
+  ]
+}
+```
 
 ### VSCode에 Prettier Extention 추가
 
