--- a/docs/09.tailwind.md
+++ b/docs/09.tailwind.md
@@ -48,7 +48,7 @@ npm install -D tailwindcss postcss autoprefixer
     ```js
     /** @type {import('tailwindcss').Config} */
     module.exports = {
-      content: ["./src/**/*.{js,jsx}"],
+      content: ['./src/**/*.{js,jsx}'],
       theme: {
         extend: {},
       },
