--- a/docs/12.practice.md
+++ b/docs/12.practice.md
@@ -81,22 +81,70 @@ npm install
 
 ## 이슈 생성
 
+- Github 저장소 > Issues > New issue > Open a blank issue
+  - title: PR 테스트용으로 만든 이슈
+  - description: PR 테스트를 위해 생성한 이슈.
+  - Submit new issue
+
 ## 이슈 처리를 위한 브랜치 생성
+
+- Github 저장소 > Issues > PR 테스트용으로 만든 이슈 > Create a branch
+  - Branch name: feature/[이슈번호]-pr-test
+  - Create branch
+  - 팝업창에 나온 git 명령어 복사
+
+## 브랜치 이동
+
+- 프로젝트 루트에서 복사한 git 명령어 실행
+
+## 이슈 해결
+
+- 이슈 해결에 필요한 코드 작성
+  - 프로젝트 루트에 아무 파일이나 생성
 
 ## 커밋
 
+```sh
+git add .
+git commit -m "feature: PR 테스트 resolve #[이슈번호]"
+git push
+```
+
 ## PR 생성
+
+- Github 저장소 > Code > feature/[이슈번호]-pr-test 항목의 Compare & pull request
+  - title, description 작성 후 Create pull request
 
 ## PR 검토
 
+- PR 요청자 이외의 팀원이 Github 저장소 > Pull requests > PR 테스트용으로 만든 이슈
+- Review required 항목의 Add your review 선택
+- 코드 확인 후 Review changes
+  - Leave a comment: 버튼의 폰트를 9px로 수정 바랍니다.
+  - Request changes 선택(Comment: 단순 코멘트, Approve: 승인, Request changes: 수정 요청(거부))
+  - Submit review
+  
 ## PR 수정
+- PR 요청자가 코드 수정 후에 다시 push
 
 ## PR 승인
+- Request changes 코멘트 하위에 "New changes since you last viewed" 메세지가 생기면 그 옆의 View changes 버튼 선택
+- (./#PR-검토) 부터 다시 반복
 
 ## PR 병합
+- 지정된 인원(2명)의 PR 승인이 완료되면 Merge pull request 버튼이 보임
+- Merge pull request > Confirm merge 버튼으로 develop 브랜치에 merge
 
 ## 브랜치 삭제
+- merge된 브랜치는 더이상 필요 없으므로 원격 레포지토리와 로컬 레피지토리에서 삭제
 
-```
+### 원격 레포지토리에서 삭제
+- Delete branch 버튼 클릭
 
+### 로컬 레포지토리에서 삭제
+- 프로젝트 루트에서 실행
+```sh
+git switch develop
+git pull
+git branch -D feature/[이슈번호]-pr-test
 ```
