--- a/docs/08.convention.md
+++ b/docs/08.convention.md
@@ -76,36 +76,33 @@ eslint, globals, @eslint/js
 ```js
 import globals from 'globals';
 import pluginJs from '@eslint/js';
-import tseslint from 'typescript-eslint';
 
 export default [
-  { files: ['**/*.{js,mjs,cjs,ts}'] },
   { languageOptions: { globals: globals.browser } },
   pluginJs.configs.recommended,
-  ...tseslint.configs.recommended,
 ];
 ```
 
 ### 설정 파일 내용
 
-- files: 확장자가 js, mjs, cjs, ts인 경우에 적용
 - languageOptions.globals: 각 전역 변수를 덮어쓰기 가능한지 여부 지정(true면 덮어쓰기 가능, false면 읽기 전용, 기본은 false)
   - globals.browser: 브라우저의 전역 변수에 대해서 기본값(false, 읽기 전용) 적용(location, 이벤트 핸들러에 대해서만 true)
 - pluginJs.configs.recommended: ESLint 팀에서 권장하는 규칙 활성화
   - pluginJs.configs.all: 모든 ESLint 규칙 활성화
-- rules: 사용자 정의 규칙 지정
+
+### 커스텀 규칙 설정
+
+- eslint.config.js 파일에 rules 속성으로 커스텀 룰 추가
   - 이전의 모든 규칙 보다 우선함
   - 'off' 또는 0
   - 'warn' 또는 1
   - 'error' 또는 2
 
-### 커스텀 규칙 설정
+#### 작성 방법
+- Javascript: <https://eslint.org/docs/latest/rules>
+- Typescript: <https://typescript-eslint.io/rules>
 
-- 필요에 따라 eslint.config.js 파일의 rules에 커스텀 룰 추가
-- 작성 방법
-  - Javascript: <https://eslint.org/docs/latest/rules>
-  - Typescript: <https://typescript-eslint.io/rules>
-
+#### 작성 예시
 ```js
 export default [
   ......
@@ -114,7 +111,7 @@ export default [
       "no-var": "off", // var 키워드 사용 가능
       "prefer-const": "warn", // 변수가 재할당 되지 않는다면 let 대신 const 사용
       "no-cond-assign": "warn", // 조건문에서 변수값 할당식 사용
-      "no-redeclare": "warn", // 변수 중복 선언
+      "no-redeclare": 1, // 변수 중복 선언
     }
   }
 ]
