--- a/docs/08.convention.md
+++ b/docs/08.convention.md
@@ -172,7 +172,7 @@ export default [
 
 - Prettier 설치
   ```shell
-  npm i prettier
+  npm i -D prettier
   ```
 - 설정 파일 작성 방법: <https://prettier.io/docs/en/configuration.html>
 - 설정 옵션: <https://prettier.io/docs/en/options>
@@ -180,7 +180,7 @@ export default [
 - .prettierrc.js 예시
   ```js
   export default {
-    // 문자열에 single quote 사용(기본값 true)
+    // 문자열에 single quote 사용(기본값 false)
     singleQuote: true,
     // 코드 마지막에 세미콜론 추가(기본값 true)
     semi: true,
