--- a/docs/14.qna.md
+++ b/docs/14.qna.md
@@ -1,7 +1,8 @@
 # 자주 묻는 질문
 
 ## Git
-### develop 브랜치에서 feature 브랜치 만들어서 작업하는 중에 develop 브랜치가 업데이트 됨. 작업중이던 feature 브랜치에 develop 최신 버전을 반영할려면 어떻게 해야 하나?
+### rebase
+* 질문: develop 브랜치에서 feature/1-test 브랜치 만들어서 작업하는 중에 develop 브랜치가 업데이트 됨. 작업중이던 feature/1-test 브랜치에 develop 최신 버전을 반영할려면 어떻게 해야 하나?
 - rebase나 merge를 사용해서 develop 브랜치의 최신 내역을 가져올 수 있습니다.
 
 #### Rebase 사용 방법
@@ -11,10 +12,10 @@
 1. develop 브랜치의 최신 내역 가져오기
   - git fetch origin
 
-2. feature10/postDetailPage/jinsu 브랜치에서 rebase 실행
-  - git checkout feature10/postDetailPage/jinsu
+2. feature/1-test 브랜치에서 rebase 실행
+  - git checkout feature/1-test
   - git rebase origin/develop
-    - develop 브랜치의 최신 커밋을 기준으로 feature10/postDetailPage/jinsu 브랜치의 커밋을 재배치(rebase)
+    - develop 브랜치의 최신 커밋을 기준으로 feature/1-test 브랜치의 커밋을 재배치(rebase)
 
 3. 충돌 해결
   - 충돌이 발생하면 충돌을 해결한 후
@@ -24,12 +25,18 @@
   - rebase를 중단하고 이전 상태로 돌아가려면
     - git rebase --abort
    
+4. 로컬의 변경 사항을 원격 레포지토리에 푸시
+  - rebase 이전에 feature 브랜치를 이미 원격 레포지토리에 푸시한 상태라면 rebase한 로컬의 변경 사항을 원격에 푸시해야 함
+  - git pull origin feature/1-test 명령으로 원격 변경 사항을 가져온 후에(충돌이 발생하면 해결 필요) git push origin feature/1-test 명령으로 다시 푸시
+  - 또는 원격 변경을 병합하지 않고 덮어쓰고 싶다면 강제로 푸시
+    - git push --force origin feature/1-test
+
 #### Merge 사용 방법
 1. develop 브랜치의 최신 내역 가져오기
   - git fetch origin
 
-2. feature10/postDetailPage/jinsu 브랜치로 이동하여 develop 병합
-  - git checkout feature10/postDetailPage/jinsu
+2. feature/1-test 브랜치로 이동하여 develop 병합
+  - git checkout feature/1-test
   - git merge origin/develop
 
 3. 충돌 해결
