--- a/docs/08.convention.md
+++ b/docs/08.convention.md
@@ -156,11 +156,7 @@ export default [
 
 - VSCode 편집창에서 바로 ESLint 경고/에러 확인 가능
 - VSCode > Extensions > ESLint 검색, 설치
-  - VSCode에서 오픈한 작업폴더에 설치된 eslint 모듈이나 글로벌로 설치된 eslint 모듈을 사용하므로 eslint 모듈이 설치되어 있어야 함
-    ```shell
-    npm i eslint
-    npm i -g eslint
-    ```
+  - VSCode에서 오픈한 작업폴더에 설치된 eslint 모듈이나 글로벌로 설치된 eslint 모듈을 사용하므로 eslint 모듈이 설치되어 있어야 동작함
 
 ## Prettier 컨벤션
 
@@ -171,13 +167,13 @@ export default [
 ### 프로젝트에 Prettier 설정
 
 - Prettier 설치
-  ```shell
+  ```sh
   npm i -D prettier
   ```
 - 설정 파일 작성 방법: <https://prettier.io/docs/en/configuration.html>
 - 설정 옵션: <https://prettier.io/docs/en/options>
-- 프로젝트 루트에 .prettierrc.js 파일 작성
-- .prettierrc.js 예시
+- 프로젝트 루트에 prettier.config.js 파일 작성
+- prettier.config.js 예시
   ```js
   export default {
     // 문자열에 single quote 사용(기본값 false)
@@ -203,18 +199,18 @@ export default [
 
 - 현재 폴더내의 모든 파일을 포맷에 맞춰서 변환
 
-  ```shell
+  ```sh
   npx prettier --write .
   ```
 
 - 지정한 폴더내의 모든 파일을 포맷에 맞춰서 변환
 
-  ```shell
+  ```sh
   npx prettier --write ./src
   ```
 
 - 지정한 파일을 포맷에 맞춰서 변환
-  ```shell
+  ```sh
   npx prettier --write ./src/App.js
   ```
 
@@ -231,21 +227,40 @@ npm i -D eslint-config-prettier
 
 - 다른 구성을 재정의하기 위해 .eslintrc 파일 extends의 마지막에 추가
 
-```json
-{
-  "extends": [
-    ......
-    "prettier"
-  ]
-}
+```js
+......
+import eslintConfigPrettier from 'eslint-config-prettier';
+export default [
+  ......
+  eslintConfigPrettier,
+]
 ```
 
 ### VSCode에 Prettier Extention 추가
+
+Prettier Extention을 설치하면 파일 저장시 자동으로 Prettier 포맷팅 동작
 
 - Extentions > Prettier - Code formatter 설치
 - File > Preferences > Settings > Workspace
   - "Editor: Format On Save" 체크 (파일 저장시 자동으로 포맷팅)
   - "Editor: Default Formatter"에 "Prettier - Code formatter" 선택 (기본 JavaScript formatter 대신 Prettier를 formatter로 지정)
+
+### Prettier Extention이 동작하지 않을 경우
+
+js, html 파일을 저장할 때 vscode > OUTPUT > Prettier 에서 Prettier 로그가 출력되지 않으면 Prettier 플러그인이 동작하지 않고 있는 것이며 다음 설정을 추가
+
+- .vscode\settings.json 파일에 추가
+
+```js
+......
+"[javascript]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
+},
+
+"[html]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
+}
+```
 
 # Git 커밋 메세지 컨벤션
 
