--- a/docs/14.qna.md
+++ b/docs/14.qna.md
@@ -1,70 +1,102 @@
 # 자주 묻는 질문
 
 ## Git
+
 ### rebase
-* 질문: develop 브랜치에서 feature/1-test 브랜치 만들어서 작업하는 중에 develop 브랜치가 업데이트 됨. 작업중이던 feature/1-test 브랜치에 develop 최신 버전을 반영할려면 어떻게 해야 하나?
+
+- 질문: develop 브랜치에서 feature/1-test 브랜치 만들어서 작업하는 중에 develop 브랜치가 업데이트 됨. 작업중이던 feature/1-test 브랜치에 develop 최신 버전을 반영할려면 어떻게 해야 하나?
+
 - rebase나 merge를 사용해서 develop 브랜치의 최신 내역을 가져올 수 있습니다.
 
 #### Rebase 사용 방법
+
 - git rebase는 Git에서 두 브랜치의 변경 사항을 병합하는 방법 중 하나로, 기존 커밋 기록을 수정하여 히스토리를 깔끔하게 만드는 도구입니다.
 - 브랜치의 커밋을 다른 브랜치의 최신 커밋 위에 재배치(rebase)하여, 마치 해당 브랜치에서 작업을 처음부터 했던 것처럼 히스토리가 정리됩니다.
 
 1. develop 브랜치의 최신 내역 가져오기
-  - git fetch origin
+
+- git fetch origin
 
 2. feature/1-test 브랜치에서 rebase 실행
-  - git checkout feature/1-test
-  - git rebase origin/develop
-    - develop 브랜치의 최신 커밋을 기준으로 feature/1-test 브랜치의 커밋을 재배치(rebase)
+
+- git checkout feature/1-test
+- git rebase origin/develop
+  - develop 브랜치의 최신 커밋을 기준으로 feature/1-test 브랜치의 커밋을 재배치(rebase)
 
 3. 충돌 해결
-  - 충돌이 발생하면 충돌을 해결한 후
-  - git add <파일명> 명령으로 수정된 파일을 추가하고
-  - rebase를 계속 진행하려면
-    - git rebase --continue
-  - rebase를 중단하고 이전 상태로 돌아가려면
-    - git rebase --abort
-   
+
+- 충돌이 발생하면 충돌을 해결한 후
+- git add <파일명> 명령으로 수정된 파일을 추가하고
+- rebase를 계속 진행하려면
+  - git rebase --continue
+- rebase를 중단하고 이전 상태로 돌아가려면
+  - git rebase --abort
+
 4. 로컬의 변경 사항을 원격 레포지토리에 푸시
-  - rebase 이전에 feature 브랜치를 이미 원격 레포지토리에 푸시한 상태라면 rebase한 로컬의 변경 사항을 원격에 푸시해야 함
-  - git pull origin feature/1-test 명령으로 원격 변경 사항을 가져온 후에(충돌이 발생하면 해결 필요) git push origin feature/1-test 명령으로 다시 푸시
-  - 또는 원격 변경을 병합하지 않고 덮어쓰고 싶다면 강제로 푸시
-    - git push --force origin feature/1-test
+
+- rebase 이전에 feature 브랜치를 이미 원격 레포지토리에 푸시한 상태라면 rebase한 로컬의 변경 사항을 원격에 푸시해야 함
+- git pull origin feature/1-test 명령으로 원격 변경 사항을 가져온 후에(충돌이 발생하면 해결 필요) git push origin feature/1-test 명령으로 다시 푸시
+- 또는 원격 변경을 병합하지 않고 덮어쓰고 싶다면 강제로 푸시
+  - git push --force origin feature/1-test
 
 #### Merge 사용 방법
+
 1. develop 브랜치의 최신 내역 가져오기
-  - git fetch origin
+
+- git fetch origin
 
 2. feature/1-test 브랜치로 이동하여 develop 병합
-  - git checkout feature/1-test
-  - git merge origin/develop
+
+- git checkout feature/1-test
+- git merge origin/develop
 
 3. 충돌 해결
-  - 충돌이 발생하면 충돌을 해결한 후
-  - git add 후에 git commit을 사용해 병합을 완료
+
+- 충돌이 발생하면 충돌을 해결한 후
+
+- git add 후에 git commit을 사용해 병합을 완료
 
 #### Rebase와 Merge의 차이점
 
 ##### Rebase
+
 - 기존 커밋 기록을 새롭게 쌓아서, 히스토리가 직선형으로 유지됨
 - 충돌이 발생했을 때 커밋별로 하나씩 해결해야 할 수 있음
 - 히스토리가 깔끔해 보이지만, 기존 커밋 ID가 변경됨
 
 ###### Rebase가 적합한 상황
+
 - 개인 작업 브랜치에서 히스토리를 깔끔하게 유지하고 싶은 경우
 
 ##### Merge
+
 - 두 브랜치의 히스토리가 병합되고, merge 커밋이 생성됨
 - 히스토리가 병합된다는 점에서 rebase와는 달리 커밋이 분기된 기록이 남음
 
 ###### Merge가 적합한 상황
+
 - 협업 중인 브랜치, 이미 원격에 푸시된 브랜치, 히스토리 보존이 중요한 상황
 
 #### 결론
+
 - 개인이 이슈별로 만든 브랜치는 개인 작업 브랜치이므로 rebase가 더 적합해 보임
 - 다만 merge는 충돌이 발생하면 한 번만 해결하면 되지만 rebase는 각 커밋을 순차적으로 재배치하므로 여러 커밋에서 충돌이 발생할 경우 각 커밋마다 충돌을 해결해야하므로 충돌 해결이 더 복잡할 수 있음
+
+### 코드 리뷰시 테스트
+
+- 질문: Github에서 PR 검토할때 코드만 봐서는 잘 알수 없어서 직접 테스트를 해보고 싶은데?
+  - PR 요청한 브랜치를 로컬에 받아와서 테스트 진행
+  ```sh
+  # 서버의 변경사항 가져오기
+  git fetch
+  # PR 브랜치로 체크아웃
+  git checkout <PR-브랜치>
+  # 새로운 패키지가 추가됐다면
+  npm i
+  # 개발 서버 구동
+  npm run dev
+  ```
 
 ## API
 
 ## Javascript
-
