--- a/docs/08.convention.md
+++ b/docs/08.convention.md
@@ -214,6 +214,32 @@ export default [
   npx prettier --write ./src/App.js
   ```
 
+### VSCode에 Prettier Extention 추가
+
+Prettier Extention을 설치하면 파일 저장시 자동으로 Prettier 포맷팅 동작
+
+- Extentions > Prettier - Code formatter 설치
+- File > Preferences > Settings > Workspace
+  - "Editor: Format On Save" 체크 (파일 저장시 자동으로 포맷팅)
+  - "Editor: Default Formatter"에 "Prettier - Code formatter" 선택 (기본 JavaScript formatter 대신 Prettier를 formatter로 지정)
+
+### Prettier Extention이 동작하지 않을 경우
+
+js, html 파일을 저장할 때 vscode > OUTPUT > Prettier 에서 Prettier 로그가 출력되지 않으면 Prettier 플러그인이 동작하지 않고 있는 것이므로 다음 설정을 추가
+
+- .vscode\settings.json 파일에 추가
+
+```js
+......
+"[javascript]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
+},
+
+"[html]": {
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
+}
+```
+
 ### ESLint와 충돌
 
 - ESLint에는 코드 품질 규칙뿐만 아니라 스타일 규칙도 포함됨
@@ -234,32 +260,6 @@ export default [
   ......
   eslintConfigPrettier,
 ]
-```
-
-### VSCode에 Prettier Extention 추가
-
-Prettier Extention을 설치하면 파일 저장시 자동으로 Prettier 포맷팅 동작
-
-- Extentions > Prettier - Code formatter 설치
-- File > Preferences > Settings > Workspace
-  - "Editor: Format On Save" 체크 (파일 저장시 자동으로 포맷팅)
-  - "Editor: Default Formatter"에 "Prettier - Code formatter" 선택 (기본 JavaScript formatter 대신 Prettier를 formatter로 지정)
-
-### Prettier Extention이 동작하지 않을 경우
-
-js, html 파일을 저장할 때 vscode > OUTPUT > Prettier 에서 Prettier 로그가 출력되지 않으면 Prettier 플러그인이 동작하지 않고 있는 것이며 다음 설정을 추가
-
-- .vscode\settings.json 파일에 추가
-
-```js
-......
-"[javascript]": {
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
-},
-
-"[html]": {
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
-}
 ```
 
 # Git 커밋 메세지 컨벤션
