--- a/docs/15.qna.md
+++ b/docs/15.qna.md
@@ -54,7 +54,7 @@
 
 - 충돌이 발생하면 충돌을 해결한 후
 
-- git add 후에 git commit을 사용해 병합을 완료
+- git add 후에 git commit을 사용해 병합 완료
 
 #### Rebase와 Merge의 차이점
 
@@ -97,6 +97,60 @@
   npm run dev
   ```
 
+## 피그마(기획)
+
+### 브런치 스토리
+
+#### 별명 중복체크
+
+- API 서버에 추가 예정입니다.
+
+#### 메인 페이지에 있는 광고 배너는 API에서 제공해 주는가?
+
+- 하드코딩 하세요.
+
+#### 메인 페이지의 요즘 뜨는 브런치는 API에서 제공해 주는가?
+
+- 게시물 목록 조회 API를 사용하고 조회수 기준으로 정렬해서 가져오면 됩니다.
+
+#### 탑 구독 작가는 어떤 API 사용?
+
+- API 서버에 추가 예정입니다.
+
+#### 파일 업로드 UI는 앱 스타일로 직접 만들어야 하나?
+
+- 그냥 input type=file로 만들면 모바일에서는 자동으로 앱 스타일로 나옵니다.
+
+#### 글쓰기 중간에 이미지가 여러개 들어가는데 어떻게 구현 하나?
+
+- WYSIWYG 에디터를 사용해서 텍스트와 이미지를 입력을 받습니다.
+- 입력은 완료한 후 등록 버튼을 누를 때 다음 둘중의 한가지 방식으로 이미지를 서버에 업로드합니다.
+  - 이미지를 base64 인코딩해서 본문 텍스트와 같이 통째로 서버에 전송
+  - 등록 버튼을 누르면 선택한 모든 이미지를 서버에 업로드 한 후 이미지가 들어갈 자리는 img 태그로 만들어서 본문 텍스트를 서버에 전송
+    - 파일 업로드 API 참고: <https://11.fesp.shop/apidocs/#/%ED%8C%8C%EC%9D%BC/post_files_>
+
+### 나이키
+
 ## API
 
+### 게시물 검색 API는 어떻게 사용하나?
+
+- 참고: <https://11.fesp.shop/apidocs/#/%EA%B2%8C%EC%8B%9C%ED%8C%90/get_posts_>
+
 ## Javascript
+
+### 현재 페이지를 바텀 메뉴에 선택 상태로 표시
+
+- 헤더, 푸터를 컴포넌트화 시켜서 각 페이지에서 불러오는데 현재 페이지를 바텀 메뉴에 선택된 상태로 어떻게 표시하나?
+  - url을 기반으로 현재 페이지 확인해서 바텀 메뉴 링크와 일치하는 경우 선택 상태의 이미지로 표시
+
+### 페이지 이동시 매번 렌더링되면서 느림
+
+- 메뉴 이동할때마다 계속 헤더, 푸터가 렌더링 되면서 느린데 해결 방법은?
+  - SPA로 구현(메뉴 클릭 시 이동할 페이지를 ajax로 받아와서 바디만 교체)하면 되는데 그건 리엑트에서 할 것이기 때문에 굳이 안해도 되고 그냥 페이지 이동 방식으로 해도 됨
+
+### 프리티어 동작 안함
+
+- 프리티어가 터미널에서 `npx prettier --write .` 직접 호출할때는 동작하는데 파일 저장할때 자동으로 포매팅하는 기능이 동작 안함
+
+  - [프리티어 설정](./08.convention.md#Prettier-Extention이-동작하지-않을-경우) 참고
