--- a/docs/14.api.md
+++ b/docs/14.api.md
@@ -48,7 +48,7 @@
 - Params > Add Param
   - Name: type
   - Path: info
-- URL 우측에 있는 **->** 클릭해서 요청 전송
+- URL 우측에 있는 **화살표(->)** 클릭해서 요청 전송
 
 #### 환경 변수 추가
 
@@ -88,7 +88,7 @@
   }
   ```
 
-- URL 우측에 있는 **->** 클릭해서 요청 전송
+- URL 우측에 있는 **화살표(->)** 클릭해서 요청 전송
 
 - 에러 확인
 
@@ -120,7 +120,7 @@
   }
   ```
 
-- URL 우측에 있는 **->** 클릭해서 요청 전송
+- URL 우측에 있는 **화살표(->)** 클릭해서 요청 전송
 
 - Response 확인
   - 로그인 성공시 응답데이터에 JWT 토큰이 token.accessToken, token.refreshToken 속성으로 전달됨
