--- a/docs/03.feature.md
+++ b/docs/03.feature.md
@@ -58,7 +58,7 @@
 ### **상품 리스트(필수)**
 
 - **메인 카테고리별 상품 목록 조회(필수)**
-  - 메인 메뉴를 클릭하면 신발 카테고리 상품 목록으로 이동
+  - 메인 메뉴를 클릭하면 **신발 카테고리** 상품 목록으로 이동
 - 서브 카테고리별 상품 목록 조회(선택)
   - 메인 메뉴에 마우스 오버시 서브 카테고리(신발, 의류, 용품) 보여주고 서브 카테고리 선택시 해당 카테고리의 상품 목록으로 이동(선택)
 - 성별, 가격대 필터링(선택)
