📝 이슈의 규모 추가

--- a/docs/05.issue.md
+++ b/docs/05.issue.md
@@ -168,3 +168,15 @@ fix #123
 - **help wanted**: 외부의 도움이 필요한 이슈.
 - **wontfix**: 해결되지 않을 예정인 이슈.
 - **duplicate**: 중복된 이슈.
+
+## 이슈로 지정하는 작업의 규모
+
+GitHub에서 이슈를 지정할 때, 하나의 이슈는 독립적으로 처리 가능한 작은 기능 단위가 되어야 하며 작업의 규모는 다음 기준에 따라 나눌 수 있지만, 팀이나 프로젝트의 특성에 맞춰 적절히 조정
+
+- 작업의 독립성: 하나의 이슈는 가능한 한 독립적인 작업이어야 함. 다른 작업에 지나치게 의존하지 않고, 개별적으로 완료될 수 있는 단위로 나누는 것이 이상적
+
+- 완료 시간: 이슈 하나는 짧게는 몇 시간에서 길게는 며칠 안에 완료할 수 있는 작업이 적당. 일반적으로 1~3일 정도 소요되는 작업 단위로 나누는 것을 고려. 너무 큰 작업이라면 하위 작업으로 나눠 관리
+
+- 구체성: 이슈는 명확하고 구체적인 목표를 포함하도록 작성. 예를 들어, "장바구니" 대신 "장바구니 UI 작성", "장바구니에 상품 담기", "장바구니 상품 수량 수정", "장바구니 상품 삭제" 같은 작은 기능 단위로 나누어야 함.
+
+- 기능적 측면: 하나의 이슈는 주로 하나의 기능 또는 버그 수정을 다루도록 지정. 너무 많은 기능을 하나의 이슈로 묶으면 작업 관리가 어렵고, 진행 상황 추적이 힘들어짐.
