--- a/docs/02.start.md
+++ b/docs/02.start.md
@@ -60,10 +60,10 @@ npm install
 
 ##### MPA 설정
 
-- Vite는 SPA(Single Page Application)를 위한 툴 체인이므로 기본은 index.html 하나만 사용됨
-- 여러 html 페이지를 사용하는 MPA(Multi Page Application) 방식의 웹사이트를 위해서는 vite 설정 파일의 rollupOptions에 각 html 페이지를 등록해야 함
+- Vite는 SPA(Single Page Application)를 위한 툴 체인이므로 기본은 index.html 하나만 사용되며 404에러가 발생하면 index.html로 응답함(fallback)
+- 여러 html 페이지를 사용하는 MPA(Multi Page Application) 방식의 웹사이트를 위해서는 vite 설정 파일의 rollupOptions에 각 html 페이지를 등록해야 하고 SPA대신 MPA 스타일의 앱임을 알려주어야 함
 
-  - 프로젝트 루트에 vite.config.js 파일 생성
+- 프로젝트 루트에 vite.config.js 파일 생성
 
   ```js
   import { defineConfig } from 'vite';
@@ -79,6 +79,7 @@ npm install
         },
       },
     },
+    appType: 'mpa', // fallback 사용안함
   });
   ```
 
