--- a/docs/14.api.md
+++ b/docs/14.api.md
@@ -39,6 +39,8 @@ cd dbinit-sample
 ```
 
 - .env 파일 생성 및 작성
+  - [팀 client-id] 자리에 부여받은 client-id로 수정
+  - [팀 비밀번호] 자리에 부여받은 비밀번호로 수정
 
 ```
 DB_URL=mongodb://[팀 client-id]:[팀 비밀번호]@db.fesp.shop:27017
