--- a/docs/03.feature.md
+++ b/docs/03.feature.md
@@ -37,6 +37,8 @@
 
 - **파일 첨부(필수)**
 - 텍스트 정렬(선택)
+- WYSIWYG 에디터(선택)
+  - 사용자가 직접 텍스트를 꾸밀수 있는 기능을 직접 구현하거나 라이브러리를 사용해서 구현
 
 ### **작가 홈(필수)**
 
@@ -60,7 +62,7 @@
 - **메인 카테고리별 상품 목록 조회(필수)**
   - 메인 메뉴를 클릭하면 **신발 카테고리** 상품 목록으로 이동
 - 서브 카테고리별 상품 목록 조회(선택)
-  - 메인 메뉴에 마우스 오버시 서브 카테고리(신발, 의류, 용품) 보여주고 서브 카테고리 선택시 해당 카테고리의 상품 목록으로 이동(선택)
+  - 메인 메뉴에 마우스 오버시 서브 카테고리(신발, 의류, 용품) 보여주고 서브 카테고리 선택시 해당 카테고리의 상품 목록으로 이동
 - 성별, 가격대 필터링(선택)
 - 정렬(선택)
 - 페이지네이션 또는 인피니트 스크롤(선택)
