--- a/docs/14.api.md
+++ b/docs/14.api.md
@@ -18,7 +18,7 @@
 
 ## DB 초기화
 
-- API 서버가 사용하는 DB에 일정 데이터를 추가해 두어야 API 테스트가 가능하므로 이를 위해 초기화 스크립트를 실행
+- API 서버가 사용하는 DB에 데이터 일부를 미리 추가해 두어야 API 테스트가 가능하므로 이를 위해 초기화 스크립트를 실행
 
 ### 다운로드
 
@@ -86,7 +86,7 @@ npm run dbinit
 
 - COLLECTIONS > Create Collection
 
-  - Name: vanilla-brunch 또는 vanilla-nike
+  - Name: vanilla-brunch
   - Location: 프로젝트루트/api
   - Folder Name: vanilla-brunch
   - Create
@@ -106,16 +106,25 @@ npm run dbinit
 #### 환경 변수 추가
 
 - Bruno 우측 상단의 No Environment > Configure > Create > Create Environment
-  - Environment Name: vanilla-sample
+  - Environment Name: sample
     - Create
   - Add variable
     - Name: url
     - Value: https://11.fesp.shop
   - Add variable
     - Name: client-id
-    - Value: 00-sample
+    - Value: 00-brunch
   - Save
-- vanilla-sample 선택
+- sample 선택
+
+#### 헤더에 client-id 추가
+
+- 매 요청을 보낼때 헤더값으로 client-id를 추가한다.
+
+- vanilla-brunch 컬렉션에 마우스 올린 후 더보기(...) > Settings > Headers > Add Header
+  - Name: client-id
+  - Value: {{client-id}}
+  - Save
 
 #### 게시물 목록 조회 테스트
 
@@ -168,7 +177,7 @@ npm run dbinit
 
   ```json
   {
-    "email": "u1@market.com",
+    "email": "w1@gmarket.com",
     "password": "11111111"
   }
   ```
