--- a/docs/14.api.md
+++ b/docs/14.api.md
@@ -23,6 +23,7 @@
 ### 다운로드
 
 - 프로젝트/api 폴더에서 실행하면 dbinit-sample 폴더에 스크립트가 다운로드 됨
+- 이전에 다운로드한 파일을 덮어씌우려면 --force 옵션 추가
 
 ```sh
 npx degit https://github.com/uzoolove/febc11-vanilla-api/server/api/dbinit dbinit-sample
@@ -91,18 +92,6 @@ npm run dbinit
   - Folder Name: vanilla-brunch
   - Create
 
-#### 게시물 목록 조회 테스트
-
-- vanilla-brunch 컬렉션에 마우스 올린 후 더보기(...) > New Request
-  - Name: 게시물 목록
-  - URL: https://11.fesp.shop/posts
-  - Create
-  - 팝업창이 뜨면 Safe Mode 선택 후 Save
-- Params > Add Param
-  - Name: type
-  - Path: info
-- URL 우측에 있는 **화살표(->)** 클릭해서 요청 전송
-
 #### 환경 변수 추가
 
 - Bruno 우측 상단의 No Environment > Configure > Create > Create Environment
@@ -119,7 +108,7 @@ npm run dbinit
 
 #### 헤더에 client-id 추가
 
-- 매 요청을 보낼때 헤더값으로 client-id를 추가한다.
+- 매 요청시 헤더값으로 client-id를 자동으로 보내기 위한 설정
 
 - vanilla-brunch 컬렉션에 마우스 올린 후 더보기(...) > Settings > Headers > Add Header
   - Name: client-id
@@ -128,9 +117,15 @@ npm run dbinit
 
 #### 게시물 목록 조회 테스트
 
-- vanilla-brunch > [게시물 목록] 선택 후 URL 수정
-  - {{url}}/posts
-- 요청 전송
+- vanilla-brunch 컬렉션에 마우스 올린 후 더보기(...) > New Request
+  - Name: 게시물 목록
+  - URL: {{url}}/posts
+  - Create
+  - 팝업창이 뜨면 Safe Mode 선택 후 Save
+- Params > Add Param
+  - Name: type
+  - Path: info
+- URL 우측에 있는 **화살표(->)** 클릭해서 요청 전송
 
 #### 게시물 북마크 추가 테스트
 
@@ -266,6 +261,7 @@ npm run dbinit
 ### 샘플 Bruno 파일 다운로드
 
 - 프로젝트/api 폴더에서 실행하면 bruno-sample 폴더에 다운로드 됨
+- 이전에 다운로드한 파일을 덮어씌우려면 --force 옵션 추가
 
 ```sh
 npx degit https://github.com/uzoolove/febc11-vanilla-api/server/api/bruno bruno-sample
