--- a/docs/14.api.md
+++ b/docs/14.api.md
@@ -172,7 +172,7 @@ npm run dbinit
 
   ```json
   {
-    "email": "w1@gmarket.com",
+    "email": "w1@gmail.com",
     "password": "11111111"
   }
   ```
@@ -231,7 +231,7 @@ npm run dbinit
 
 - vanilla-brunch 컬렉션에 마우스 올린 후 더보기(...) > Settings
   - Auth > No Auth 클릭해서 Bearer Token 선택
-  - Token: {{accessToken}}
+  - Token: `{{accessToken}}`
   - Save
 
 #### 게시물 북마크 추가 테스트
