--- a/docs/03.feature.md
+++ b/docs/03.feature.md
@@ -102,3 +102,16 @@
 - 추천 제품 목록(선택)
 
 ### **로그인 & 회원가입(필수)**
+
+## 공통으로 지켜야 할 코딩 규칙
+
+- 모든 script에 type="module" 추가
+- 이벤트는 html 태그에 인라인 방식으로 등록하지 말고 js 파일에서 addEventListener로 등록
+- header, footer 같이 반복적으로 나오는 html 코드는 컴포넌트화 시켜서 하나만 작성하고 필요한 곳에서는 컴포넌트를 가져다 쓴다.
+  - ajax로 컴포넌트를 가져온 후 DOM API로 삽입해서 구현
+  - 또는 web components 작성해서 구현
+- ajax 호출하는 함수 공통으로 작성
+  - client-id, Authorization 헤더는 공통 함수에서 한번만 지정
+  - 토큰 만료시 처리할 작업
+    - accessToken 만료로 인증 실패시 refreshToken으로 accessToken 교체하도록 구현하고 refreshToken도 만료되면 로그인 페이지로 이동 후 로그인 후에 원래 페이지로 돌아오기 구현
+    - 또는 accessToken 만료로 인증 실패시 로그인 페이지로 이동 후 로그인 후에 원래 페이지로 돌아오기 구현
