--- a/docs/14.api.md
+++ b/docs/14.api.md
@@ -214,12 +214,11 @@ npm run dbinit
 
   ```js
   // 로그인 성공 후
-  if (res.status === 200) {
-    if (req.url === `${bru.getEnvVar('url')}/users/login`) {
+  if(res.status === 200){
+    if(req.url.split('?')[0] === `${bru.getEnvVar('url')}/users/login`){
       bru.setEnvVar('accessToken', res.body.item.token.accessToken);
       bru.setEnvVar('refreshToken', res.body.item.token.refreshToken);
-    } else if (req.url === `${bru.getEnvVar('url')}/auth/refresh`) {
-      // accessToken 재발행 후
+    }else if(req.url === `${bru.getEnvVar('url')}/auth/refresh`){ // accessToken 재발행 후
       bru.setEnvVar('accessToken', res.body.accessToken);
     }
   }
